# Rubik-s-Cube

./: .gitignore  CMakeLists.txt  README.md  cube.c
examples/: example1.in  example2.in  example2.out  example3.in  example3.out
src/: command.h  cube.c  cube.h  cube_main.c  input.c  input.h  rotation.c  rotation.h
